--- a/TaskManagementApp/Views/TaskLists/_TaskListTable.cshtml
+++ b/TaskManagementApp/Views/TaskLists/_TaskListTable.cshtml
@@ -2,7 +2,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Decription)
+            @Html.DisplayNameFor(model => model.Description)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.DueDate)
@@ -17,7 +17,7 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Decription)
+                @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DueDate)
