--- a/TaskManagementApp/Views/TaskLists/Delete.cshtml
+++ b/TaskManagementApp/Views/TaskLists/Delete.cshtml
@@ -12,11 +12,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Decription)
+            @Html.DisplayNameFor(model => model.Description)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Decription)
+            @Html.DisplayFor(model => model.Description)
         </dd>
 
         <dt>
