--- a/TaskManagementApp/Views/TaskLists/_TaskListTable.cshtml
+++ b/TaskManagementApp/Views/TaskLists/_TaskListTable.cshtml
@@ -17,10 +17,20 @@
     {
         <tr>
             <td>
+               
                 @Html.CheckBoxFor(modelItem => item.IsTaskDone, new { id=item.Id, @class = "ActiveCheck" })
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
+                @if (!item.IsTaskDone)
+                {
+                    @Html.DisplayFor(modelItem => item.Description)
+                }
+                else
+                {
+                <div class="CompltedTask">
+                    @Html.DisplayFor(modelItem => item.Description)
+                </div>
+                }
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DueDate)
