--- a/TaskManagementApp/Views/TaskLists/Index.cshtml
+++ b/TaskManagementApp/Views/TaskLists/Index.cshtml
@@ -3,42 +3,43 @@
 @{
     ViewBag.Title = "Index";
 }
+   
+<div id="taskCreateForm" class="mt-5">
+    <h2 class="display-4">Add New Task</h2>
 
-<div id="taskCreateForm">
     @using (Ajax.BeginForm("AJAXCreate", "TaskLists",
-                new AjaxOptions
-                {
-                    InsertionMode = InsertionMode.Replace,
-                    HttpMethod = "POST",
-                    UpdateTargetId = "tableDiv"
+        new AjaxOptions
+        {
+            InsertionMode = InsertionMode.Replace,
+            HttpMethod = "POST",
+            UpdateTargetId = "tableDiv"
 
-                }))
+        }))
     {
         @Html.AntiForgeryToken()
-        <div class="form-group">
-            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+        <div class="row mt-5">
+            <div class="col-md-1">
+                @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label" })
+            </div>
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.DueDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-1 ml-auto">
+                @Html.LabelFor(model => model.DueDate, htmlAttributes: new { @class = "control-label" })
+            </div>
+            <div class="col-md-2">
                 @Html.EditorFor(model => model.DueDate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DueDate, "", new { @class = "text-danger" })
             </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create Task" class="btn btn-primary" />
+            <div class="col-md-2">
+                <input type="submit" value="Add New Task" class="btn btn-success" />
             </div>
-        </div>
+        </div><!-- .row -->
     }
 </div>
 
-<div id="tableDiv" class="mt-5"></div>
+<div id="tableDiv" class="mt-5 bd-example"></div>
 @section Scripts {
     <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
     <script src="~/Custom_Scripts/BuildTable.js"></script>
