--- a/TaskManagementApp/Views/TaskLists/Create.cshtml
+++ b/TaskManagementApp/Views/TaskLists/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model TaskManagementApp.Models.TaskList
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Task";
 }
 
-<h2>Create</h2>
+<h2 class="display-4 mt-5">Create Task</h2>
 
 
 @using (Html.BeginForm()) 
