--- a/TaskManagementApp/Views/TaskLists/Details.cshtml
+++ b/TaskManagementApp/Views/TaskLists/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model TaskManagementApp.Models.TaskList
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Task Details";
 }
 
-<h2>Details</h2>
+<h2 class="display-4 mt-5">Task Details</h2>
 
 <div>
-    <h4>TaskList</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
