--- a/TaskManagementApp/Views/Shared/_Layout.cshtml
+++ b/TaskManagementApp/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <div class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <div class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <div class="navbar-header">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,11 +26,12 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+ 
+    <div class="container-fluid body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Task Management Application</p>
+        <footer class="text-center">
+            <p>&copy; @DateTime.Now.Year - Task Management Application | Developed by: <a href="http://rabinrai.com">Rabin</a></p>
         </footer>
     </div>
 
